--- a/src/pages/admin/filter-categories/edit/[id]/index.astro
+++ b/src/pages/admin/filter-categories/edit/[id]/index.astro
@@ -690,7 +690,7 @@ if (Astro.request.method === "POST") {
               </div>
             </div>
 
-            <div class="flex items-center">
+            <div class="flex items-center mt-6 mb-4">
               <input
                 type="checkbox"
                 id="is_active"
